# Q_Author

./: .env.example  .gitignore  LICENSE  README.md  package.json  tsconfig.base.json  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: app.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: SidebarProject.tsx  StreamView.tsx  TopbarControls.tsx  WriterPane.tsx
apps/desktop/src/pages/: Home.tsx
examples/projects/demo-novella/: characters.md  lore.md  project.json  voice.md
examples/projects/demo-novella/scenes/: 001_opening.md  002_incident.md
examples/scene-briefs/: scene-brief.template.md
examples/voice-cards/: default.voice.md
