[package]
name = "q-author-desktop"
version = "0.1.0"
description = "Q Author Desktop"
authors = ["Jason"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["shell-open"] }
tauri-plugin-store = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
